package com.poslugator.events.task;

public record UserPreview(Long id, String firstName, String lastName, String avatar) {}
