classDiagram
    class TaskEvent {
        <<sealed interface>>
        +UUID eventId()
        +String taskId()
        +String taskTitle()
        +UserPreview actor()
        +Long subjectId()
        +String subjectEmail()
        +Instant timestamp()
    }

    class UserPreview {
        <<record>>
        +Long id
        +String firstName
        +String lastName
        +String avatar
    }

    TaskEvent --> UserPreview : actor

    class ProposalSentEvent {
        <<record>>
    }
    class ProposalAcceptedEvent {
        <<record>>
    }
    class ProposalRejectedEvent {
        <<record>>
    }
    class ProposalDeletedEvent {
        <<record>>
    }
    class ExecutionStartedEvent {
        <<record>>
    }
    class ExecutionCompletedEvent {
        <<record>>
    }
    class ExecutionConfirmedEvent {
        <<record>>
    }
    class ExecutionRejectedEvent {
        <<record>>
    }
    class ExecutionCancelledEvent {
        <<record>>
    }
    class TaskCancelledEvent {
        <<record>>
    }
    class TaskReopenedEvent {
        <<record>>
    }
    class ReviewCreatedEvent {
        <<record>>
    }

    TaskEvent <|.. ProposalSentEvent
    TaskEvent <|.. ProposalAcceptedEvent
    TaskEvent <|.. ProposalRejectedEvent
    TaskEvent <|.. ProposalDeletedEvent
    TaskEvent <|.. ExecutionStartedEvent
    TaskEvent <|.. ExecutionCompletedEvent
    TaskEvent <|.. ExecutionConfirmedEvent
    TaskEvent <|.. ExecutionRejectedEvent
    TaskEvent <|.. ExecutionCancelledEvent
    TaskEvent <|.. TaskCancelledEvent
    TaskEvent <|.. TaskReopenedEvent
    TaskEvent <|.. ReviewCreatedEvent
